[package]
name = "ashey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.1", features = ["rustls"] }
actix-files = "0.6.2"

env_logger = "0.10"
log = "0.4"
rustls = "0.20.2"
rustls-pemfile = "1"
futures-util = "0.3.28"